--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
         "paths": {
             "@/*": ["./src/*"],
             "@app/*": ["./src/app/*"],
-            "@messages/*": ["./messages/*"]
+            "@messages/*": ["./messages/*"],
+            "@types/*": ["./src/types/*"]
         }
     },
     "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
